# NiaARM

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  basic_run.py  interest_measures.md  interestingness_measures.md  niaarm.1  pyproject.toml  visualization.md
.github/images/: NiaARM.eps
.github/templates/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST.md
.github/workflows/: ci.yml  publish.yml  test.yml
datasets/: README.md  breast.csv  data_developer_salary.csv  football_players.csv
docs/: cli.rst  conf.py  contributing.rst  documentation.rst  getting_started.rst  index.rst  installation.rst  license.rst  refs.bib  requirements.txt  testing.rst
docs/_static/: output_sample.csv
docs/api/: dataset.rst  feature.rst  index.rst  mine.rst  niaarm.rst  preprocessing.rst  rule.rst  rule_list.rst  stats.rst  text.rst  visualize.rst
examples/: basic_run.py  basic_run_with_get_rules.py  config.toml  data_squashing.py  dataset_report.py  feature_report.py  make_rule.py  prepare_dataset.py  stats.py  text_mining.py  visualization.py  visualization_scatter_plot.py  working_with_rule_list.py
examples/visualization_examples/: prepare_datasets.py
examples/visualization_examples/grouped_matrix_plot/: data_developer_salary_grouped_matrix_plot.py  football_players_grouped_matrix_plot.py  weather_data_grouped_matrix_plot.py
examples/visualization_examples/sankey_diagram/: abalone_sankey_diagram.py  weather_data_sankey_diagram.py
examples/visualization_examples/scatter_plot/: data_developer_salary_scatter_plot.py  football_players_scatter_plot.py  weather_data_scatter_plot.py
examples/visualization_examples/two_key_plot/: data_developer_salary_two_key_plot.py
niaarm/: __init__.py  __main__.py  association_rule.py  cli.py  dataset.py  feature.py  mine.py  niaarm.py  preprocessing.py  rule.py  rule_list.py  stats.py  text.py  visualize.py
niaarm/tests/: conftest.py  test_amplitude.py  test_coverage.py  test_cut_point.py  test_inclusion.py  test_read_csv.py  test_rule_building.py  test_shrinkage.py  test_support_confidence.py  test_visualization.py
niaarm/tests/test_data/: README.md  sportydatagen_generated.csv
output/: output.csv
paper/: .paper.bib.kate-swp  paper.bib  paper.md
src/niaarm/: __init__.py  __main__.py  cli.py  dataset.py  feature.py  mine.py  niaarm.py  preprocessing.py  rule.py  rule_list.py  text.py  visualize.py
tests/: test_cut_point.py  test_metrics.py  test_niaarm.py  test_read_csv.py  test_rule_building.py  test_sankey_diagram.py  test_text_mining.py  test_two_key_plot.py  test_visualization.py
tests/test_data/: README.md  artm_test_dataset.json  wiki_test_case.csv
