[tool.poetry]
name = "niaarm"
version = "0.3.3"
description = "A minimalistic framework for numerical association rule mining"
authors = ["Žiga Stupan <ziga.stupan1@student.um.si>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
keywords = ['association rule mining', 'data science', 'numerical association rule mining', 'preprocessing', 'visualization']
homepage = "https://github.com/firefly-cpp/NiaARM"
repository = "https://github.com/firefly-cpp/NiaARM"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="niaarm.1", format="sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
niapy = "^2.0.1"
numpy = "^1.23.5"
pandas = "^1.4.0"
nltk = "^3.7"
Sphinx = {version = "^4.4.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.1", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[tool.poetry.scripts]
niaarm = 'niaarm.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
