[tool.poetry]
name = "niaarm"
version = "0.3.10"
description = "A minimalistic framework for numerical association rule mining"
authors = ["Žiga Stupan <ziga.stupan1@student.um.si>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
keywords = ['association rule mining', 'data science', 'numerical association rule mining', 'preprocessing', 'visualization']
homepage = "https://github.com/firefly-cpp/NiaARM"
repository = "https://github.com/firefly-cpp/NiaARM"
documentation = "https://niaarm.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.cff", format="sdist" },
    { path="niaarm.1", format="sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
niapy = "^2.0.5"
numpy = "^1.26.1"
pandas = "^2.1.1"
nltk = "^3.8.1"
tomli = { version = "^2.0.1", python = "<3.11" }
plotly = "^5.22.0"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinx = "^7.2.6"

[tool.poetry.scripts]
niaarm = 'niaarm.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
