[project]
name = "niaarm"
version = "0.4.6"
description = "A minimalistic framework for numerical association rule mining"
authors = [
    { name = "Žiga Stupan", email = "ziga.stupan1@student.um.si" },
    { name = "Iztok Fister Jr.", email = "iztok@iztok-jr-fister.eu" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "association rule mining",
    "data science",
    "numerical association rule mining",
    "preprocessing",
    "visualization",
]
dependencies = [
    "niapy>=2.6.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "nltk>=3.9.2",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/firefly-cpp/NiaARM"
Repository = "https://github.com/firefly-cpp/NiaARM"
Documentation = "https://niaarm.readthedocs.io/en/latest/"

[project.scripts]
niaarm = "niaarm.cli:main"

[dependency-groups]
dev = [
    { include-group = "pre-commit" },
    { include-group = "test" },
    { include-group = "lint" },
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
]
lint = [
    "ruff>=0.14.9",
]
pre-commit = [
    "pre-commit>=4.5.0"
]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinx>=8.2.3",
]

[tool.uv.build-backend]
source-include = [
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "niaarm.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
